@@ -3466,3 +3466,4 @@
 ( cvs diff -u -r 1.22.2.19 -r 1.22.2.20 src/addrbook.c;  cvs diff -u -r 1.1.4.7 -r 1.1.4.8 src/addrcindex.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/addrduplicates.c;  cvs diff -u -r 1.6.10.17 -r 1.6.10.18 src/addrharvest.c;  cvs diff -u -r 1.3.2.5 -r 1.3.2.6 src/enriched.c;  cvs diff -u -r 1.12.2.24 -r 1.12.2.25 src/html.c;  cvs diff -u -r 1.12.2.17 -r 1.12.2.18 src/ldif.c;  cvs diff -u -r 1.83.2.140 -r 1.83.2.141 src/mimeview.c;  cvs diff -u -r 1.6.10.14 -r 1.6.10.15 src/mutt.c;  cvs diff -u -r 1.6.2.13 -r 1.6.2.14 src/pine.c;  cvs diff -u -r 1.49.2.110 -r 1.49.2.111 src/procmime.c;  cvs diff -u -r 1.14.2.15 -r 1.14.2.16 src/vcard.c;  cvs diff -u -r 1.1.2.72 -r 1.1.2.73 src/wizard.c;  ) > 3.5.0cvs52.patchset
 ( cvs diff -u -r 1.60.2.53 -r 1.60.2.54 po/es.po;  cvs diff -u -r 1.382.2.464 -r 1.382.2.465 src/compose.c;  cvs diff -u -r 1.274.2.263 -r 1.274.2.264 src/mainwindow.c;  ) > 3.5.0cvs53.patchset
 ( cvs diff -u -r 1.382.2.465 -r 1.382.2.466 src/compose.c;  cvs diff -u -r 1.14.2.52 -r 1.14.2.53 src/editaddress.c;  cvs diff -u -r 1.207.2.205 -r 1.207.2.206 src/folderview.c;  cvs diff -u -r 1.274.2.264 -r 1.274.2.265 src/mainwindow.c;  cvs diff -u -r 1.3.12.31 -r 1.3.12.32 src/message_search.c;  cvs diff -u -r 1.83.2.141 -r 1.83.2.142 src/mimeview.c;  cvs diff -u -r 1.5.2.18 -r 1.5.2.19 src/noticeview.c;  cvs diff -u -r 1.105.2.141 -r 1.105.2.142 src/prefs_account.c;  cvs diff -u -r 1.204.2.175 -r 1.204.2.176 src/prefs_common.c;  cvs diff -u -r 1.16.2.32 -r 1.16.2.33 src/prefs_customheader.c;  cvs diff -u -r 1.3.2.20 -r 1.3.2.21 src/prefs_ext_prog.c;  cvs diff -u -r 1.1.4.55 -r 1.1.4.56 src/prefs_filtering_action.c;  cvs diff -u -r 1.10.2.37 -r 1.10.2.38 src/prefs_gtk.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/prefs_logging.c;  cvs diff -u -r 1.43.2.75 -r 1.43.2.76 src/prefs_matcher.c;  cvs diff -u -r 1.1.2.38 -r 1.1.2.39 src/prefs_msg_colors.c;  cvs diff -u -r 1.49.2.111 -r 1.49.2.112 src/procmime.c;  cvs diff -u -r 1.15.2.55 -r 1.15.2.56 src/summary_search.c;  cvs diff -u -r 1.395.2.380 -r 1.395.2.381 src/summaryview.c;  cvs diff -u -r 1.43.2.103 -r 1.43.2.104 src/toolbar.c;  cvs diff -u -r 1.1.4.12 -r 1.1.4.13 src/gtk/colorsel.c;  cvs diff -u -r 1.9.2.58 -r 1.9.2.59 src/gtk/gtkaspell.c;  cvs diff -u -r 1.5.2.80 -r 1.5.2.81 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.44 -r 1.4.2.45 src/gtk/gtkutils.h;  cvs diff -u -r 1.2.2.30 -r 1.2.2.31 src/gtk/inputdialog.c;  cvs diff -u -r 1.5.2.52 -r 1.5.2.53 src/gtk/pluginwindow.c;  cvs diff -u -r 1.1.2.84 -r 1.1.2.85 src/gtk/quicksearch.c;  cvs diff -u -r 1.1.2.33 -r 1.1.2.34 src/plugins/bogofilter/bogofilter_gtk.c;  cvs diff -u -r 1.5.2.23 -r 1.5.2.24 src/plugins/dillo_viewer/dillo_prefs.c;  cvs diff -u -r 1.23.2.49 -r 1.23.2.50 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 3.5.0cvs54.patchset
+( cvs diff -u -r 1.274.2.265 -r 1.274.2.266 src/mainwindow.c;  ) > 3.5.0cvs55.patchset
